# Enopios

./: .gitignore  .pre-commit-config.yaml  README.md  pyoxidizer.bzl  pyproject.toml  requirements.txt
.github/workflows/: build.yml
enopios/: __main__.py  app.py  build.py  cli.py  gui.py
enopios/app/: credentials.toml  index.py  start.py
js/app/: .gitignore  package.json
js/app/src/: main.ts  preload.ts  window.ts
