[tool.poetry]
name = "enopios"
version = "0.1.0"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
