[tool.poetry]
name = "enopios"
version = "0.2.0"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"

[tool.poetry.dev-dependencies]
pyoxidizer = "*"
pre-commit = "*"
black = "22.6.0"

[tool.poetry.scripts]
enopios = "enopios.__main__:app"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
