[tool.poetry]
name = "enopios"
version = "0.2.0"
description = "multi OS Electron app bundle for streamlit project with Github actions."
authors = [
    "Simon Biggs <simon.biggs@radiotherapy.ai>",
    "Luc Vedrenne <luc.etu@unistra.fr>"
]

license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"

[tool.poetry.dev-dependencies]
pyoxidizer = "*"
pre-commit = "*"
black = "22.6.0"

[tool.poetry.scripts]
enopios = "enopios.__main__:main"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
